tests/paczka1/small_fuzzy/20942968.err
Error in line 7: S996 S996 88,9
Error in line 13: nIrMpx S439 46,1
Error in line 1: 0Umm S439 21,3
